# sharp

./: .gitignore  CMakeLists.txt  C_STDLIB_HEADERS_CHECKLIST.md  LINUX_BUILD.md  Makefile  NEXT_AI_HANDOFF.md  P99_BUGS.md  PLAN_CDECL_REFACTOR.md  PLAN_C_SUPPORT.md  PLAN_FIX_P99_CRASH.md  PLAN_FIX_PARSE_RIGOR.md  PLAN_FIX_STACK_OVERFLOW.md  PLAN_NODE_SOURCE_FILE.md  PLAN_UCRT_SUPPORT.md  PROJECT_HANDOFF.md  USAGE.md  _analyze_failures.ps1  _check_complex.ps1  _check_wstdio.ps1  _classify.ps1  _diag2.ps1  _diag3.ps1  _diag_failures.ps1  _diag_ucrt.ps1  _diag_ucrt_failures.ps1  _run_tests.bat  _tcc_summary.ps1  _test_all.ps1  _test_clangcl_ucrt.ps1  _test_msvc.bat  _test_process.h.c  _test_tcc2.ps1  _test_tcc_headers.ps1  _test_ucrt_all.ps1  _test_ucrt_headers.ps1  _test_vs2022.ps1  _test_wingdi.h.c  _test_winnt.h.c  analyze_hex.py  ast.h  (+175 more)
.claude/: settings.local.json
.trae/documents/: architecture_refactor_plan.md
.trae/rules/: 开发规范.md
build-clean/: CMakeCache.txt
build-debug/: CMakeCache.txt
cpp/: cpp_internal.h  directive.c  macro.c  pptok.c
docs/: c11_plan.md  review_round2.md
examples/: generic.sp  hello.c  hello.sp  io.c  io.sp  param_dtor.sp  raii.sp  raii_edge.sp  raii_stress.sp  vec.sp
p99-master/p99/: p99.h  p99_args.h.c  p99_generated.h
sharp/: platform.h
sharp-cpp/sharp-cpp/: HANDOVER.md  Makefile  PHASE10_SUMMARY.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  PHASE8_SUMMARY.md  PHASE9_SUMMARY.md  PHASE_R10_SUMMARY.md  PHASE_R11_SUMMARY.md  PHASE_R12_SUMMARY.md  PHASE_R13_SUMMARY.md  PHASE_R14_SUMMARY.md  PHASE_R15_SUMMARY.md  PHASE_R16_SUMMARY.md  PHASE_R17_SUMMARY.md  PHASE_R18_SUMMARY.md  PHASE_R1_SUMMARY.md  PHASE_R20_SUMMARY.md  PHASE_R2_SUMMARY.md  PHASE_R3_SUMMARY.md  PHASE_R4_SUMMARY.md  PHASE_R5_SUMMARY.md  PHASE_R6_SUMMARY.md  PHASE_R7_SUMMARY.md  PHASE_R8_SUMMARY.md  PHASE_R9_SUMMARY.md  PLAN.md  PROFILING.md  cpp.c  cpp.h  cpp_internal.h  cpp_targets.c  directive.c  expr.c  macro.c  (+6 more)
sharp-cpp/sharp-cpp/.github/workflows/: ci.yml
sharp-fe/: HANDOVER.md  Makefile  PHASE0_SUMMARY.md  PHASE1_SUMMARY.md  PHASE_R1_SUMMARY.md  PHASE_R2_SUMMARY.md  PHASE_R3_SUMMARY.md  PHASE_R4_SUMMARY.md  PHASE_R5_SUMMARY.md  PHASE_R6_SUMMARY.md  PHASE_R7_SUMMARY.md  PHASE_R8_SUMMARY.md  PHASE_S1_SUMMARY.md  PHASE_S2_SUMMARY.md  PHASE_S4_SUMMARY.md  PHASE_S5_SUMMARY.md  PLAN.md  ROADMAP.md  ast.c  ast.h  c_superset_probe.sh  cg.c  cg.h  import.c  import.h  lex.c  lex.h  parse.c  parse.h  probe.c  scope.c  scope.h  sema.c  sema.h  sharp.c  sharp.h  sharp_internal.h  sharpc.c  test_decls.c  test_helpers.h  (+4 more)
sharp-fe/c_superset_probes/: README.md  p02_static.c  p03_unsigned.c  p04_postfix_inc.c  p05_compound_assign.c  p06_struct_basic.c  p07_typedef.c  p08_enum.c  p09_ptr_param.c  p10_array_param.c  p11_string_lit.c  p12_ternary.c  p13_while.c  p14_switch.c  p15_func_proto.c  p16_extern.c  p17_const_local.c  p18_sizeof_int.c  p19_ptr_arith.c  p20_for_postfix.c  p21_kr_func.c  p22_union.c  p23_bitfield.c  p24_float_double.c  p25_neg_lit.c  p26_shift_op.c  p27_addr_arr.c  p28_func_ptr.c  p29_init_list.c  p30_struct_init.c  p31_string_arr.c  p32_for_no_decl.c  p33_do_while.c  p34_struct_ptr.c  p35_void_ret.c  p36_inline.c  p37_volatile.c  p38_register.c  p39_compound_lit.c  p40_designated.c  (+37 more)
src/: ast.h  cgen.c  hir.c  hir.h  lexer.c  lower.c  main.c  parser.c  sema.c  sharp.h  types.c  types.h  util.c
src/preproc/: cpp.c  cpp.h  cpp_internal.h  cpp_main.c  directive.c  directive.h  expr.c  expr.h  macro.c  macro.h  pptok.c  pptok.h
test/lua-5.4.6/output/: lapi.c  lauxlib.c  lbaselib.c  lcode.c  lcorolib.c  lctype.c  ldblib.c  ldebug.c  ldo.c  ldump.c  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  lmathlib.c  lmem.c  loadlib.c  lobject.c  lopcodes.c  loslib.c  lparser.c  lstate.c  lstring.c  lstrlib.c  ltable.c  ltablib.c  ltm.c  lua.c  lundump.c  lutf8lib.c  lvm.c  lzio.c
test/lua-5.4.6/src/: lstrlib.pp2.c  lua.c
tests/: d_check.sp  d_conio.sp  d_crtdbg.sp  d_excpt.sp  d_locking.sp  d_malloc.sp  d_mbstring.sp  d_search.sp  d_stat.sp  d_stdlib.sp  d_stralign.sp  d_timeb.sp  d_utime.sp  d_varargs.sp  d_winbase.sp  d_windef.sp  d_windows.sp  d_winnt.sp  d_winuser.sp  debug_preprocess.c  run_negative.sh  simple_check.sp  test_alloca.c  test_alloca.sp  test_anonymous_struct.c  test_anonymous_struct.sp  test_arith.c  test_arith.sp  test_array.c  test_array.sp  test_asm_basic.c  test_asm_basic.sp  test_ast_assert.c  test_attribute_mode.c  test_attribute_mode.sp  test_bitfield.c  test_bitfield.sp  test_bool.c  test_bool.sp  test_bool_c.c  (+169 more)
tests/negative/: arg_count.sp  arg_type.sp  assign_mismatch.sp  return_type.sp  test_const_discard.sp  test_const_fn_arg.sp  unknown_field.sp  unknown_ident.sp  unknown_method.sp
